--- a/income/piggy_bank/static/word_cloud.html
+++ b/income/piggy_bank/static/word_cloud.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="29f1d295344d471cb84b4b7633a8f255" style="width:900px; height:300px;"></div>
+    <div id="234de273298740128a11fa7fd272ad4c" style="width:900px; height:300px;"></div>
     <script>
-        var chart_29f1d295344d471cb84b4b7633a8f255 = echarts.init(
-            document.getElementById('29f1d295344d471cb84b4b7633a8f255'), 'white', {renderer: 'svg'});
-        var option_29f1d295344d471cb84b4b7633a8f255 = {
+        var chart_234de273298740128a11fa7fd272ad4c = echarts.init(
+            document.getElementById('234de273298740128a11fa7fd272ad4c'), 'white', {renderer: 'svg'});
+        var option_234de273298740128a11fa7fd272ad4c = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -60,7 +60,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(7,36,16)"
+                            "color": "rgb(17,123,146)"
                         }
                     }
                 },
@@ -69,7 +69,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(91,116,142)"
+                            "color": "rgb(24,4,38)"
                         }
                     }
                 },
@@ -78,7 +78,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(102,83,117)"
+                            "color": "rgb(5,80,125)"
                         }
                     }
                 },
@@ -87,7 +87,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(36,80,38)"
+                            "color": "rgb(63,151,32)"
                         }
                     }
                 },
@@ -96,7 +96,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(136,85,8)"
+                            "color": "rgb(6,9,94)"
                         }
                     }
                 },
@@ -105,7 +105,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(28,123,18)"
+                            "color": "rgb(22,29,68)"
                         }
                     }
                 },
@@ -114,7 +114,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(82,81,78)"
+                            "color": "rgb(117,62,150)"
                         }
                     }
                 },
@@ -123,7 +123,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(55,32,138)"
+                            "color": "rgb(111,11,117)"
                         }
                     }
                 },
@@ -132,7 +132,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(89,37,65)"
+                            "color": "rgb(111,116,122)"
                         }
                     }
                 },
@@ -141,7 +141,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(51,44,94)"
+                            "color": "rgb(7,59,114)"
                         }
                     }
                 },
@@ -150,7 +150,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(51,145,99)"
+                            "color": "rgb(126,130,29)"
                         }
                     }
                 },
@@ -159,7 +159,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(35,95,31)"
+                            "color": "rgb(49,139,18)"
                         }
                     }
                 },
@@ -168,7 +168,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(94,97,157)"
+                            "color": "rgb(20,96,136)"
                         }
                     }
                 },
@@ -177,7 +177,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(25,102,137)"
+                            "color": "rgb(124,4,27)"
                         }
                     }
                 },
@@ -186,7 +186,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(139,42,10)"
+                            "color": "rgb(72,16,41)"
                         }
                     }
                 },
@@ -195,7 +195,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(85,68,103)"
+                            "color": "rgb(38,26,38)"
                         }
                     }
                 },
@@ -204,7 +204,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(12,21,62)"
+                            "color": "rgb(105,19,54)"
                         }
                     }
                 },
@@ -213,7 +213,16 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(28,144,73)"
+                            "color": "rgb(53,143,99)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e742\u6708",
+                    "value": 28738.45,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(136,52,105)"
                         }
                     }
                 },
@@ -222,7 +231,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(87,102,3)"
+                            "color": "rgb(49,90,157)"
                         }
                     }
                 },
@@ -231,7 +240,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(131,130,64)"
+                            "color": "rgb(128,142,67)"
                         }
                     }
                 },
@@ -240,7 +249,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(62,82,20)"
+                            "color": "rgb(47,66,1)"
                         }
                     }
                 },
@@ -249,7 +258,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(64,77,10)"
+                            "color": "rgb(159,131,46)"
                         }
                     }
                 },
@@ -258,7 +267,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,34,30)"
+                            "color": "rgb(35,34,92)"
                         }
                     }
                 },
@@ -267,7 +276,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(49,3,145)"
+                            "color": "rgb(79,17,101)"
                         }
                     }
                 },
@@ -276,7 +285,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(159,0,47)"
+                            "color": "rgb(58,123,48)"
                         }
                     }
                 },
@@ -285,7 +294,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(20,5,80)"
+                            "color": "rgb(112,75,64)"
                         }
                     }
                 },
@@ -294,7 +303,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(11,33,100)"
+                            "color": "rgb(8,91,93)"
                         }
                     }
                 },
@@ -303,7 +312,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(139,149,152)"
+                            "color": "rgb(128,62,63)"
                         }
                     }
                 },
@@ -312,7 +321,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(51,151,68)"
+                            "color": "rgb(69,115,159)"
                         }
                     }
                 },
@@ -321,7 +330,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(70,131,68)"
+                            "color": "rgb(91,114,111)"
                         }
                     }
                 },
@@ -330,7 +339,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(134,69,22)"
+                            "color": "rgb(49,59,100)"
                         }
                     }
                 },
@@ -339,7 +348,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(106,80,88)"
+                            "color": "rgb(35,59,65)"
                         }
                     }
                 },
@@ -348,7 +357,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(153,114,46)"
+                            "color": "rgb(42,71,133)"
                         }
                     }
                 },
@@ -357,7 +366,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(0,85,125)"
+                            "color": "rgb(51,35,33)"
                         }
                     }
                 },
@@ -366,7 +375,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(124,152,17)"
+                            "color": "rgb(43,134,76)"
                         }
                     }
                 },
@@ -375,7 +384,16 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(101,115,88)"
+                            "color": "rgb(90,93,67)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e742\u6708",
+                    "value": 28738.45,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(23,102,63)"
                         }
                     }
                 }
@@ -401,7 +419,7 @@
         "borderWidth": 0
     }
 };
-        chart_29f1d295344d471cb84b4b7633a8f255.setOption(option_29f1d295344d471cb84b4b7633a8f255);
+        chart_234de273298740128a11fa7fd272ad4c.setOption(option_234de273298740128a11fa7fd272ad4c);
     </script>
 </body>
 </html>
