--- a/income/piggy_bank/static/plot.html
+++ b/income/piggy_bank/static/plot.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="ae132e5993784caa86463bbb7f464d44" style="width:900px; height:500px;"></div>
+    <div id="08264c83b44b4428a486e5f2e6b22e4d" style="width:900px; height:500px;"></div>
     <script>
-        var chart_ae132e5993784caa86463bbb7f464d44 = echarts.init(
-            document.getElementById('ae132e5993784caa86463bbb7f464d44'), 'white', {renderer: 'canvas'});
-        var option_ae132e5993784caa86463bbb7f464d44 = {
+        var chart_08264c83b44b4428a486e5f2e6b22e4d = echarts.init(
+            document.getElementById('08264c83b44b4428a486e5f2e6b22e4d'), 'white', {renderer: 'canvas'});
+        var option_08264c83b44b4428a486e5f2e6b22e4d = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -41,19 +41,17 @@
     "series": [
         {
             "type": "bar",
-            "name": "\u6bcf\u6708\u5b9e\u9645\u652f\u51fa",
+            "name": "\u6bcf\u6708\u5b9e\u9645\u6536\u5165",
             "data": [
-                1927.74,
-                429904.93,
-                5958.39,
-                7537.28,
-                7394.48,
-                8232.42,
-                7853.8,
-                8512.7,
-                8700.81,
-                10340.67,
-                355.16
+                9492.36,
+                339000.0,
+                9725.1,
+                12098.66,
+                12105.27,
+                12034.75,
+                12031.66,
+                11869.25,
+                11715.57
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -72,11 +70,13 @@
                 "data": [
                     {
                         "name": "mean_Value",
-                        "yAxis": 45156.21636363636
+                        "yAxis": 47785.846666666665
                     }
                 ]
             },
-            "itemStyle": {},
+            "itemStyle": {
+                "color": "#33cc33"
+            },
             "rippleEffect": {
                 "show": true,
                 "brushType": "stroke",
@@ -88,10 +88,10 @@
     "legend": [
         {
             "data": [
-                "\u6bcf\u6708\u5b9e\u9645\u652f\u51fa"
+                "\u6bcf\u6708\u5b9e\u9645\u6536\u5165"
             ],
             "selected": {
-                "\u6bcf\u6708\u5b9e\u9645\u652f\u51fa": true
+                "\u6bcf\u6708\u5b9e\u9645\u6536\u5165": true
             },
             "show": true
         }
@@ -151,24 +151,22 @@
                 }
             },
             "data": [
-                "2019\u5e744\u6708",
-                "2019\u5e745\u6708",
-                "2019\u5e746\u6708",
-                "2019\u5e747\u6708",
-                "2019\u5e748\u6708",
-                "2019\u5e749\u6708",
-                "2019\u5e7410\u6708",
-                "2019\u5e7411\u6708",
-                "2019\u5e7412\u6708",
-                "2020\u5e741\u6708",
-                "2020\u5e742\u6708"
+                "4\u6708",
+                "5\u6708",
+                "6\u6708",
+                "7\u6708",
+                "8\u6708",
+                "9\u6708",
+                "10\u6708",
+                "11\u6708",
+                "12\u6708"
             ]
         }
     ],
     "title": [
         {
-            "text": "\u652f\u51fa-\u67f1\u5f62\u56fe",
-            "subtext": "All"
+            "text": "\u6536\u5165-\u67f1\u5f62\u56fe",
+            "subtext": "2019"
         }
     ],
     "toolbox": {
@@ -202,7 +200,7 @@
         }
     }
 };
-        chart_ae132e5993784caa86463bbb7f464d44.setOption(option_ae132e5993784caa86463bbb7f464d44);
+        chart_08264c83b44b4428a486e5f2e6b22e4d.setOption(option_08264c83b44b4428a486e5f2e6b22e4d);
     </script>
 </body>
 </html>
