--- a/income/piggy_bank/static/word_cloud.html
+++ b/income/piggy_bank/static/word_cloud.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="1a682c013cd94c518aa1a0e7dfd4a766" style="width:900px; height:300px;"></div>
+    <div id="8c88c30548ac44dba353a35633c5106e" style="width:900px; height:300px;"></div>
     <script>
-        var chart_1a682c013cd94c518aa1a0e7dfd4a766 = echarts.init(
-            document.getElementById('1a682c013cd94c518aa1a0e7dfd4a766'), 'white', {renderer: 'svg'});
-        var option_1a682c013cd94c518aa1a0e7dfd4a766 = {
+        var chart_8c88c30548ac44dba353a35633c5106e = echarts.init(
+            document.getElementById('8c88c30548ac44dba353a35633c5106e'), 'white', {renderer: 'svg'});
+        var option_8c88c30548ac44dba353a35633c5106e = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -60,7 +60,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(92,4,92)"
+                            "color": "rgb(144,66,8)"
                         }
                     }
                 },
@@ -69,7 +69,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(149,142,40)"
+                            "color": "rgb(154,12,44)"
                         }
                     }
                 },
@@ -78,7 +78,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(143,7,3)"
+                            "color": "rgb(138,75,51)"
                         }
                     }
                 },
@@ -87,7 +87,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(37,97,32)"
+                            "color": "rgb(80,9,58)"
                         }
                     }
                 },
@@ -96,7 +96,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(38,147,12)"
+                            "color": "rgb(19,17,134)"
                         }
                     }
                 },
@@ -105,7 +105,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(149,105,158)"
+                            "color": "rgb(55,131,60)"
                         }
                     }
                 },
@@ -114,7 +114,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(19,134,66)"
+                            "color": "rgb(99,154,21)"
                         }
                     }
                 },
@@ -123,7 +123,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(47,130,69)"
+                            "color": "rgb(52,127,15)"
                         }
                     }
                 },
@@ -132,7 +132,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(45,144,115)"
+                            "color": "rgb(37,123,13)"
                         }
                     }
                 },
@@ -141,7 +141,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(118,92,134)"
+                            "color": "rgb(118,126,77)"
                         }
                     }
                 },
@@ -150,7 +150,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(47,154,97)"
+                            "color": "rgb(104,28,113)"
                         }
                     }
                 },
@@ -159,7 +159,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(96,65,141)"
+                            "color": "rgb(61,85,44)"
                         }
                     }
                 },
@@ -168,7 +168,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(125,128,109)"
+                            "color": "rgb(67,44,104)"
                         }
                     }
                 },
@@ -177,7 +177,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(77,114,77)"
+                            "color": "rgb(49,137,30)"
                         }
                     }
                 },
@@ -186,7 +186,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(114,91,7)"
+                            "color": "rgb(150,56,53)"
                         }
                     }
                 },
@@ -195,7 +195,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(67,132,15)"
+                            "color": "rgb(1,128,108)"
                         }
                     }
                 },
@@ -204,7 +204,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(62,55,69)"
+                            "color": "rgb(96,100,81)"
                         }
                     }
                 },
@@ -213,7 +213,7 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(76,38,38)"
+                            "color": "rgb(3,26,131)"
                         }
                     }
                 },
@@ -222,7 +222,16 @@
                     "value": 28738.45,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(115,60,120)"
+                            "color": "rgb(126,125,52)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e743\u6708",
+                    "value": 30975.8,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(11,101,69)"
                         }
                     }
                 },
@@ -231,7 +240,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(46,142,140)"
+                            "color": "rgb(99,159,117)"
                         }
                     }
                 },
@@ -240,7 +249,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(57,75,85)"
+                            "color": "rgb(83,132,33)"
                         }
                     }
                 },
@@ -249,7 +258,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(103,55,156)"
+                            "color": "rgb(147,27,148)"
                         }
                     }
                 },
@@ -258,7 +267,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(13,138,102)"
+                            "color": "rgb(94,150,95)"
                         }
                     }
                 },
@@ -267,7 +276,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(82,50,159)"
+                            "color": "rgb(120,76,121)"
                         }
                     }
                 },
@@ -276,7 +285,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(93,109,126)"
+                            "color": "rgb(100,138,88)"
                         }
                     }
                 },
@@ -285,7 +294,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(34,156,43)"
+                            "color": "rgb(62,28,113)"
                         }
                     }
                 },
@@ -294,7 +303,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(30,47,22)"
+                            "color": "rgb(139,136,117)"
                         }
                     }
                 },
@@ -303,7 +312,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(83,54,78)"
+                            "color": "rgb(90,153,96)"
                         }
                     }
                 },
@@ -312,7 +321,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(28,76,149)"
+                            "color": "rgb(16,24,12)"
                         }
                     }
                 },
@@ -321,7 +330,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(123,134,28)"
+                            "color": "rgb(114,54,83)"
                         }
                     }
                 },
@@ -330,7 +339,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(8,102,100)"
+                            "color": "rgb(87,152,128)"
                         }
                     }
                 },
@@ -339,7 +348,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(135,119,0)"
+                            "color": "rgb(158,135,7)"
                         }
                     }
                 },
@@ -348,7 +357,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(111,75,105)"
+                            "color": "rgb(140,117,160)"
                         }
                     }
                 },
@@ -357,7 +366,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(88,46,51)"
+                            "color": "rgb(42,16,118)"
                         }
                     }
                 },
@@ -366,7 +375,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(28,43,24)"
+                            "color": "rgb(56,141,22)"
                         }
                     }
                 },
@@ -375,7 +384,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(81,117,121)"
+                            "color": "rgb(45,37,29)"
                         }
                     }
                 },
@@ -384,7 +393,7 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(126,149,82)"
+                            "color": "rgb(99,143,144)"
                         }
                     }
                 },
@@ -393,7 +402,16 @@
                     "value": 28738.45,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(32,44,155)"
+                            "color": "rgb(39,152,132)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e743\u6708",
+                    "value": 30975.8,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(144,86,136)"
                         }
                     }
                 }
@@ -419,7 +437,7 @@
         "borderWidth": 0
     }
 };
-        chart_1a682c013cd94c518aa1a0e7dfd4a766.setOption(option_1a682c013cd94c518aa1a0e7dfd4a766);
+        chart_8c88c30548ac44dba353a35633c5106e.setOption(option_8c88c30548ac44dba353a35633c5106e);
     </script>
 </body>
 </html>
